<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <include layout="@layout/layout_appbar" android:id="@+id/appBar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSignOut"
        android:text="@string/sign_out"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:textColor="@color/primary_dark"
        android:drawableLeft="@drawable/ic_arrow_left"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btSignOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeader"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_label"
                    android:layout_marginEnd="10dp"
                    android:labelFor="@id/etSearch" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/etSearch"
                    android:inputType="text"
                    android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btCameraScan"
                    android:text="@string/camera_scan"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_marginEnd="5dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btSearch"
                    android:text="@string/search"
                    android:backgroundTint="@color/primary_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAdmin"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_list"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btAddUser"
                    android:layout_columnWeight="1"
                    android:text="@string/add_user"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btEditUser"
                    android:layout_columnWeight="1"
                    android:text="@string/edit_user"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btDeleteUser"
                    android:layout_columnWeight="1"
                    android:text="@string/delete_user"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btAddRecord"
                    android:layout_columnWeight="1"
                    android:text="@string/add_record"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btEditRecord"
                    android:layout_columnWeight="1"
                    android:text="@string/edit_record"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btDeleteRecord"
                    android:layout_columnWeight="1"
                    android:text="@string/delete_record"
                    android:backgroundTint="@color/primary_dark"
                    android:layout_margin="5dp"/>


            </GridLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>